<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/text_primary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<!--        HEADER Cuy + ntar tambahin Button garis 3-->
        <LinearLayout
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/btn_home"
                android:layout_marginStart="8dp"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="\u2630"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:background="@android:color/transparent"
                android:gravity="center"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                />

        </LinearLayout>

<!--        Bagian Layout Kategori-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_large">

<!--            Row Kategori Pertama : 2 kolom-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                >

<!--                APPS-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/category_height"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginEnd="8dp">

                    <TextView
                        style="@style/CatergoryText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/apps"
                        android:background="@drawable/selector_category_apps"
                        android:clickable="true"
                        android:focusable="true"/>

                </LinearLayout>

<!--                GAMES-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/category_height"
                    android:layout_weight="1"
                    android:gravity="center"
                    >

                    <TextView
                        style="@style/CatergoryText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/games"
                        android:background="@drawable/selector_category_games"
                        android:clickable="true"
                        android:focusable="true"
                        />

                </LinearLayout>

            </LinearLayout>

<!--            Row Kategori Kedua : 2 kolom-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="@dimen/app_card_margin"
                >

<!--                MOVIE & TV-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/category_height"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginEnd="8dp">

                    <TextView
                        style="@style/CatergoryText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/movies_tv"
                        android:background="@drawable/selector_category_movie"
                        android:clickable="true"
                        android:focusable="true"
                        />

                </LinearLayout>

<!--                MUSIC-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/category_height"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/CatergoryText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/selector_more_music"
                        android:gravity="center"
                        android:text="@string/music"
                        android:clickable="true"
                        android:focusable="true"
                        />

                </LinearLayout>

            </LinearLayout>

<!--            Row Kategori Ketiga : 2 kolom-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="@dimen/app_card_margin"
                >

<!--                BOOKS-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/category_height"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginEnd="8dp">

                    <TextView
                        style="@style/CatergoryText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/books"
                        android:background="@drawable/selector_more_books"
                        android:clickable="true"
                        android:focusable="true"/>

                </LinearLayout>

<!--                NEWS-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/category_height"
                    android:layout_weight="1"
                    android:gravity="center"
                    >

                    <TextView
                        style="@style/CatergoryText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/news"
                        android:background="@drawable/selector_more_news"
                        android:clickable="true"
                        android:focusable="true"
                        />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <!--            Section Popular Apps + MORE-->
        <LinearLayout
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/popular"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:padding="@dimen/padding_medium"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/btn_more_popular"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:background="@drawable/selector_more_button"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/more"
                android:textColor="@color/text_primary"
                android:gravity="center"
                android:layout_margin="@dimen/padding_small"/>

        </LinearLayout>

<!--        Horizontal scroll App Games-->
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="false"
            android:scrollbars="none"
            android:layout_marginTop="@dimen/padding_large"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <include layout="@layout/item_app_card"/>

            </LinearLayout>

        </HorizontalScrollView>

<!--        NEW UPDATE APP-->
        <LinearLayout
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_update"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:padding="@dimen/padding_medium"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/btn_more_app"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:background="@drawable/selector_more_button"
                android:text="@string/more"
                android:textAllCaps="true"
                android:textColor="@color/text_primary"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:layout_margin="@dimen/padding_small"/>

        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="false"
            android:scrollbars="none"
            android:layout_marginTop="@dimen/padding_large">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <include layout="@layout/item_app_card"/>

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>



</ScrollView>